--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">AndroidSwipeLayout</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="message">Message</string>
 
 </resources>
